// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Snapshots should match the snapshot 1`] = `
.shadow-1 {
  box-shadow: 0 2px 1px -1px var(--qtm-shadow-umbra-color),0 1px 1px 0 var(--qtm-shadow-penumbra-color),0 1px 3px 0 var(--qtm-shadow-ambient-color);
}

.Card-module__card-wrapper___HvjEg {
  background-color: var(--qtm-colors-neutral-0);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
}

.Content-module__content___itVo9 {
  font-size: calc(var(--qtm-base-font-size)*.875);
  margin: 0;
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Footer-module__footer-wrapper___fgaA4 {
  padding: 0 var(--qtm-spacing-medium) var(--qtm-spacing-medium);
}

.Header-module__header-wrapper___G5kEL {
  display: flex;
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.HeaderText-module__header-text___TE5FD {
  flex-basis: 0;
  flex-grow: 1;
}

.Title-module__title___3S2cv {
  font-size: calc(var(--qtm-base-font-size)*1.5);
  font-weight: 600;
  margin: 0;
}

.Modal-module__wrapper___LkDcM {
  align-items: center;
  background-color: rgba(66,66,66,.5);
  bottom: 0;
  display: flex;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 98;
}

.Modal-module__close-icon___a0f6b {
  position: absolute;
  right: var(--qtm-spacing-medium);
  top: var(--qtm-spacing-small);
}

.ModalContent-module__content___GJGqF {
  font-size: var(--qtm-base-font-size);
  max-height: 70vh;
  overflow-y: auto;
  padding: var(--qtm-spacing-medium);
}

.ModalHeader-module__header___lVyEE {
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.ModalTitle-module__title___AHcTw {
  font-weight: 700;
  line-height: 1.25;
}

.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

@media (min-width:0px) {
  .Modal-module__modal-card___h7YdA {
    width: 90%;
  }
}

@media (min-width:600px) {
  .Modal-module__modal-card___h7YdA {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .Modal-module__modal-card___h7YdA {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .Modal-module__modal-card___h7YdA {
    width: 800px;
  }
}

<div
  class="Modal-module__wrapper___LkDcM"
  role="dialog"
>
  <article
    class="Card-module__card-wrapper___HvjEg shadow-1 Modal-module__modal-card___h7YdA"
    tabindex="0"
  >
    <header
      class="Header-module__header-wrapper___G5kEL ModalHeader-module__header___lVyEE"
    >
      <div
        class="HeaderText-module__header-text___TE5FD"
      >
        <h2
          class="Title-module__title___3S2cv ModalTitle-module__title___AHcTw"
        >
          Modal title
        </h2>
      </div>
    </header>
    <div
      class="Content-module__content___itVo9 ModalContent-module__content___GJGqF"
    >
      Modal Content
    </div>
    <footer
      class="Footer-module__footer-wrapper___fgaA4"
    >
      ModalFooter
    </footer>
    <button
      aria-label="close dialog"
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Modal-module__close-icon___a0f6b"
      theme="[object Object]"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </article>
</div>
`;

exports[`<Modal /> Snapshots should match the snapshot 2`] = `
.shadow-1 {
  box-shadow: 0 2px 1px -1px var(--qtm-shadow-umbra-color),0 1px 1px 0 var(--qtm-shadow-penumbra-color),0 1px 3px 0 var(--qtm-shadow-ambient-color);
}

.Card-module__card-wrapper___HvjEg {
  background-color: var(--qtm-colors-neutral-0);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
}

.Content-module__content___itVo9 {
  font-size: calc(var(--qtm-base-font-size)*.875);
  margin: 0;
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Footer-module__footer-wrapper___fgaA4 {
  padding: 0 var(--qtm-spacing-medium) var(--qtm-spacing-medium);
}

.Header-module__header-wrapper___G5kEL {
  display: flex;
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.HeaderText-module__header-text___TE5FD {
  flex-basis: 0;
  flex-grow: 1;
}

.Title-module__title___3S2cv {
  font-size: calc(var(--qtm-base-font-size)*1.5);
  font-weight: 600;
  margin: 0;
}

.Modal-module__close-icon___a0f6b {
  position: absolute;
  right: var(--qtm-spacing-medium);
  top: var(--qtm-spacing-small);
}

.ModalContent-module__content___GJGqF {
  font-size: var(--qtm-base-font-size);
  max-height: 70vh;
  overflow-y: auto;
  padding: var(--qtm-spacing-medium);
}

.ModalHeader-module__header___lVyEE {
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.ModalTitle-module__title___AHcTw {
  font-weight: 700;
  line-height: 1.25;
}

.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

@media (min-width:0px) {
  .Modal-module__modal-card___h7YdA {
    width: 90%;
  }
}

@media (min-width:600px) {
  .Modal-module__modal-card___h7YdA {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .Modal-module__modal-card___h7YdA {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .Modal-module__modal-card___h7YdA {
    width: 800px;
  }
}

<article
  class="Card-module__card-wrapper___HvjEg shadow-1 Modal-module__modal-card___h7YdA"
  tabindex="0"
>
  <header
    class="Header-module__header-wrapper___G5kEL ModalHeader-module__header___lVyEE"
  >
    <div
      class="HeaderText-module__header-text___TE5FD"
    >
      <h2
        class="Title-module__title___3S2cv ModalTitle-module__title___AHcTw"
      >
        Modal title
      </h2>
    </div>
  </header>
  <div
    class="Content-module__content___itVo9 ModalContent-module__content___GJGqF"
  >
    Modal Content
  </div>
  <footer
    class="Footer-module__footer-wrapper___fgaA4"
  >
    ModalFooter
  </footer>
  <button
    aria-label="close dialog"
    class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Modal-module__close-icon___a0f6b"
    theme="[object Object]"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
      data-qtm-preloader="icon"
      data-testid="CloseIcon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
</article>
`;
